# rune_detector

./: .gitignore  README.md
src/rm_rune_detector/: CMakeLists.txt  package.xml
src/rm_rune_detector/config/: rune_detector.yaml
src/rm_rune_detector/include/rm_rune_detector/: rune_detector_node.hpp
src/rm_rune_detector/launch/: rune_detector.launch.py  test_pipeline.launch.py
src/rm_rune_detector/src/: rune_detector_node.cpp
src/rm_rune_detector/test/: test_image_node.cpp  test_mock_tf_node.cpp  test_video_node.cpp  test_video_publisher_node.cpp
src/rm_vision_core/: CMakeLists.txt  package.xml
src/rm_vision_core/cmake/: VisCoreCompilerOptions.cmake  VisCoreModule.cmake  rm_vision_coreConfig.cmake.in
src/rm_vision_core/common/: CMakeLists.txt
src/rm_vision_core/common/camera/: CMakeLists.txt
src/rm_vision_core/common/camera/include/vc/camera/: camera_param.h
src/rm_vision_core/common/camera/include/vc/camera/yml/: CameraParam.yml
src/rm_vision_core/common/contour_proc/: CMakeLists.txt
src/rm_vision_core/common/contour_proc/include/vc/contour_proc/: contour_converter.hpp  contour_wrapper.hpp  extensions.hpp  hierarchy.hpp
src/rm_vision_core/common/core/: CMakeLists.txt
src/rm_vision_core/common/core/include/vc/core/: command_line.h  cv_expansion_type.h  debug_tools.h  logging.h  property_wrapper.hpp  type_expansion.hpp  type_utils.h  yml_manager.hpp
src/rm_vision_core/common/core/include/vc/core/debug_tools/: param_canvas.h  param_view_manager.h  window_auto_layout.h
src/rm_vision_core/common/core/src/: command_line.cpp  debug_tools.cpp
src/rm_vision_core/common/core/src/debug_tools/: param_canvas.cpp  param_view_manager.cpp  window_auto_layout.cpp
src/rm_vision_core/common/dataio/: CMakeLists.txt
src/rm_vision_core/common/dataio/include/vc/dataio/: dataio.h
src/rm_vision_core/common/math/: CMakeLists.txt
src/rm_vision_core/common/math/include/vc/math/: geom_utils.hpp  pose_node.hpp  transform6D.hpp  type_utils.hpp
src/rm_vision_core/common/math/include/vc/math/geom/: geom_circle.hpp  geom_line.hpp  geom_segment.hpp
src/rm_vision_core/common/modules/detector/: CMakeLists.txt
src/rm_vision_core/common/modules/detector/include/vc/detector/: detector.h  detector_input.h  detector_output.h
src/rm_vision_core/common/modules/feature/: CMakeLists.txt
src/rm_vision_core/common/modules/feature/include/vc/feature/: feature_node.h  feature_node_child_feature_type.h  feature_node_draw_config.h  tracking_feature_node.h
src/rm_vision_core/examples/rune_detect_demo/include/rune_detect_demo/: rune_detect_demo.h  rune_detect_demo_param.h
src/rm_vision_core/examples/rune_detect_demo/src/: rune_detect_demo.cpp
src/rm_vision_core/modules/detector/rune_detector/: CMakeLists.txt
src/rm_vision_core/modules/detector/rune_detector/src/: rune_detector_calc.cpp  rune_detector_find.cpp  rune_detector_get_pnp_data.cpp  rune_detector_get_runes.cpp  rune_detector_match.cpp
src/rm_vision_core/modules/feature/rune_center/: CMakeLists.txt
src/rm_vision_core/modules/feature/rune_center/include/vc/feature/: rune_center.h  (+1 more)
src/rm_vision_core/modules/feature/rune_center/src/: rune_center.cpp
src/rm_vision_core/modules/feature/rune_combo/: CMakeLists.txt
src/rm_vision_core/modules/feature/rune_combo/src/: rune_combo.cpp
src/rm_vision_core/modules/feature/rune_fan/: CMakeLists.txt
src/rm_vision_core/modules/feature/rune_fan/src/: hump_bottom_center.cpp  hump_detector.cpp  hump_side.cpp  hump_top.cpp  rune_fan_active.cpp  rune_fan_active_incomplete.cpp  rune_fan_common.cpp  rune_fan_inactive.cpp
src/rm_vision_core/modules/feature/rune_group/: CMakeLists.txt
src/rm_vision_core/modules/feature/rune_group/src/: data_converter.cpp  pnp_calc.cpp  rune_filter_ekf.cpp  rune_filter_fusion.cpp  rune_group.cpp
src/rm_vision_core/modules/feature/rune_target/: CMakeLists.txt
src/rm_vision_core/modules/feature/rune_target/src/: rune_target_active.cpp  rune_target_common.cpp  rune_target_inactive.cpp
src/rm_vision_core/modules/feature/rune_tracker/: CMakeLists.txt
src/rm_vision_core/modules/feature/rune_tracker/src/: rune_tracker.cpp
src/rune_detector/: CMakeLists.txt  package.xml
src/rune_detector/config/: RuneCenterParam.yaml  RuneFanHumpParam.yaml  RuneFanParam.yaml  RuneTargetParam.yaml  rune_detector.yaml
src/rune_detector/include/common/: contour_wrapper.hpp  geom_utils.hpp  lazy_cache.hpp  param.hpp  pose_node.hpp  property_wrapper.hpp
src/rune_detector/include/feature/: feature_node.hpp  tracking_feature_node.h
src/rune_detector/include/feature/rune_center/: rune_center.h  rune_center_param.h
src/rune_detector/include/feature/rune_combo/: rune_combo.h  rune_combo_param.h
src/rune_detector/include/feature/rune_fan/: rune_fan.h  rune_fan_active.h  rune_fan_hump.h  rune_fan_hump_param.h  rune_fan_inactive.h  rune_fan_param.h
src/rune_detector/include/feature/rune_target/: rune_target.h  rune_target_active.h  rune_target_inactive.h  rune_target_param.h
src/rune_detector/include/rune_detector/: camera_param.h  rune_detector_node.h
src/rune_detector/include/rune_detector/common/: contour_wrapper.hpp  geom_utils.hpp
src/rune_detector/include/rune_detector/feature/: contour_wrapper.hpp  lazy_cache.hpp  thread_safe_lazy_cache.hpp
src/rune_detector/rm_vision_core/modules/detector/rune_detector/src/: rune_detector.cpp
src/rune_detector/rm_vision_core/modules/feature/rune_group/src/: rune_filter_ekf.cpp
src/rune_detector/src/: rune_detector_node.cpp
src/rune_detector/src/feature/rune_center/: rune_center.cpp
src/rune_detector/src/feature/rune_combo/: rune_combo.cpp
src/rune_detector/src/feature/rune_fan/: hump_bottom_center.cpp  hump_detector.cpp  hump_side.cpp  hump_top.cpp  rune_fan_active.cpp  rune_fan_active_incomplete.cpp  rune_fan_common.cpp  rune_fan_inactive.cpp
src/rune_detector/src/feature/rune_target/: rune_target_active.cpp  rune_target_common.cpp  rune_target_inactive.cpp
src/rune_tracker/: CMakeLists.txt  package.xml
src/rune_tracker/config/: rune_tracker.yaml
src/rune_tracker/src/: rune_tracker_node.cpp
(+36 files in other folders)
