<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_vision_core</name>
  <version>1.0.0</version>
  <description>RM Vision Core Library - Computer Vision Toolkit for RoboMaster</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- OpenCV 依赖 -->
  <depend>libopencv-dev</depend>
  
  <!-- 导出配置 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
